--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
+    "gh-pages": "^1.1.0",
     "next": "^5.0.0",
     "node-sass": "^4.7.2",
     "nodemon": "^1.17.1",
@@ -16,9 +17,12 @@
     "superagent": "^3.8.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "https://toyurc.github.io/ofada-admin/"
 }
