--- a/package.json
+++ b/package.json
@@ -7,14 +7,9 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "gh-pages": "^1.1.0",
-    "next": "^5.0.0",
-    "node-sass": "^4.7.2",
-    "nodemon": "^1.17.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1",
-    "styled-components": "^3.2.1",
-    "superagent": "^3.8.2"
+    "react-scripts": "1.1.1"
   },
   "scripts": {
     "predeploy": "npm run build",
